fix loading horizontal scroll and set tweet loading to the home page

--- a/src/components/Loading/_loading.scss
+++ b/src/components/Loading/_loading.scss
@@ -2,14 +2,16 @@
   width: 100%;
   display: flex;
   justify-content: center;
-
+  
   &__spinner,
   &__spinner:after {
     border-radius: 50%;
     width: 10em;
     height: 10em;
   }
+
   &__spinner {
+    overflow-y: hidden;
     font-size: 4px;
     position: relative;
     text-indent: -9999em;
@@ -23,6 +25,7 @@
     -webkit-animation: load8 1.1s infinite linear;
     animation: load8 1.1s infinite linear;
   }
+  
   @-webkit-keyframes load8 {
     0% {
       -webkit-transform: rotate(0deg);
